Refactoring markup to implement CSS classes

--- a/src/App.html
+++ b/src/App.html
@@ -1,4 +1,6 @@
-<div>
+<section class="main">
+  <h1 class="main__title">News Feed</h1>
+
   <NewsSource @currentSource="updateCurrentSource"></NewsSource>
   <NewsFeed :source="source"></NewsFeed>
-</div>
+</section>
